assets/styles/theme-toggle.scss
/*
	Copyright 2025 patchoulish

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
*/

@import "https://unpkg.com/open-props/easings.min.css";

.sun-and-moon > :is(.moon, .sun, .sun-beams) {
	transform-origin: center;
}

.sun-and-moon > :is(.moon, .sun) {
	fill: var(--icon-fill);
}

.theme-toggle:is(:hover, :focus-visible) > .sun-and-moon > :is(.moon, .sun) {
	fill: var(--icon-fill-hover);
}

.sun-and-moon > .sun-beams {
	stroke: var(--icon-fill);
	stroke-width: 2px;
}

.theme-toggle:is(:hover, :focus-visible) .sun-and-moon > .sun-beams {
	stroke: var(--icon-fill-hover);
}

[data-theme="dark"] .sun-and-moon > .sun {
	transform: scale(1.75);
}

[data-theme="dark"] .sun-and-moon > .sun-beams {
	opacity: 0;
}

[data-theme="dark"] .sun-and-moon > .moon > circle {
	transform: translateX(-7px);
}

@supports (cx: 1) {
	[data-theme="dark"] .sun-and-moon > .moon > circle {
		cx: 17;
		transform: translateX(0);
	}
}

@media (prefers-reduced-motion: no-preference) {
	.sun-and-moon > .sun {
		transition: transform 0.5s var(--ease-elastic-3);
	}

	.sun-and-moon > .sun-beams {
		transition:
			transform 0.5s var(--ease-elastic-4),
			opacity 0.5s var(--ease-3);
	}

	.sun-and-moon .moon > circle {
		transition: transform 0.25s var(--ease-out-5);
	}

	@supports (cx: 1) {
		.sun-and-moon .moon > circle {
			transition: cx 0.25s var(--ease-out-5);
		}
	}

	[data-theme="dark"] .sun-and-moon > .sun {
		transition-timing-function: var(--ease-3);
		transition-duration: 0.25s;
		transform: scale(1.75);
	}

	[data-theme="dark"] .sun-and-moon > .sun-beams {
		transition-duration: 0.15s;
		transform: rotateZ(-25deg);
	}

	[data-theme="dark"] .sun-and-moon > .moon > circle {
		transition-duration: 0.5s;
		transition-delay: 0.25s;
	}
}

